# MiningDashboard

./: .gitignore  Dockerfile  README.md  buf.gen.yaml
.claude/: settings.local.json
backend/: Cargo.toml  README.md  build.rs
backend/src/: config.rs  errors.rs  main.rs  server.rs
backend/src/services/: blocks.rs  difficulty.rs  fees.rs  hashrate.rs  mempool.rs  mod.rs  price.rs  price_history.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  grpcClient.ts  index.css  main.tsx
frontend/src/components/: BlocksTable.tsx  DifficultyCard.tsx  FeeCard.tsx  HashrateCard.tsx  MempoolTable.tsx  PriceCard.tsx  PriceChart.tsx
frontend/src/hooks/: useDifficulty.ts  useFees.ts  useHashrate.ts  useMempoolStream.ts  usePrice.ts  useStreamBlocks.ts
frontend/src/queries/: miningQueries.ts  queryClient.ts
frontend/src/services/: blocksStream.ts  mempoolWS.ts
frontend/src/stores/: blocksStore.ts  mempoolStore.ts
frontend/src/utils/: format.ts
proto/: mining.proto
