[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
tokio-stream = "0.1"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.12"